--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <!-- Encabezado -->
     <div class="contenedor_todo">
         <header class="encabezado">
-            <img src="./img/Logo.png" alt="logo alura" class="encabezado__logo" content="https://github.com/arcesoftware">
+            <img src="./img/Logo.png" alt="logo alura" class="encabezado__logo">
             <h1 class="encabezado__titulo">descifrador</h1>
         </header>
 
